[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 100
target-version = [
  'py310'
]

[tool.isort]
profile = 'black'

[tool.poetry]
authors = ["Arkhn's NLP Team <nlp@arkhn.com>"]
description = "MIMIC-III Based Clinical Record Completion"
license = "Apache-2.0"
name = "mimoracle"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
datasets = "^2.14.5"
pandas = "^2.1.4"
python = "~3.11"
typer = "^0.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
