[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 100
target-version = [
  'py310',
  'py311',
  'py39'
]

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "pass",
  "pragma: no cover",
  "raise NotImplementedError",
  "raise TypeError",
  "raise ValueError"
]

[tool.isort]
known_local_folder = ['spider']
line_length = 100
profile = 'black'

[tool.poetry]
authors = ["Arkhn's NLP Team <nlp@arkhn.com>"]
description = ""
license = "Apache-2.0"
name = "spider"
readme = "README.md"
repository = "https://github.com/arkhn/ai-lembic/tree/main/lib/spider"
version = "0.1.0"

[tool.poetry.dependencies]
accelerate = "^0.25.0"
bitsandbytes = "^0.41.3"
clearml = "^1.13.2"
datasets = "^2.15.0"
jupyterlab = "^4.0.9"
nltk = "^3.8.1"
pandas = "^2.1.3"
plotly = "^5.18.0"
python = "~3.11"
torch = "^2.1.1"
transformers = "^4.35.2"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov-report term-missing:skip-covered"
markers = [
  "serial",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
