[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "pass",
  "pragma: no cover",
  "raise NotImplementedError",
  "raise TypeError",
  "raise ValueError"
]

[tool.isort]
known_local_folder = [
  'style-transfer',
  'tests'
]
line_length = 100
profile = 'black'

[tool.poetry]
authors = ["Arkhn's AI Team <ai@arkhn.com>"]
description = "a package to experiement style transfer using RLF, LLM, ReST ?"
license = "Apache-2.0"
name = "style-transfer"
readme = "README.md"
repository = "https://github.com/arkhn/ai-lembic/tree/main/experiements/style-transfer"
version = "0.1.0"

[tool.poetry.dependencies]
accelerate = "^0.23.0"
bitsandbytes = "^0.41.1"
datasets = "^2.14.5"
hydra-colorlog = "^1.2.0"
hydra-core = "^1.3.2"
lightning = "^2.0.8"
peft = "^0.5.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
python = "~3.9"
quickumls = "^1.4.1"
rich = "^13.5.2" # beautiful text formatting in terminal
rootutils = "^1.0.7"
sentence-transformers = "^2.2.2"
spacy = "^3.6.1"
torch = "^2.0.1"
torchmetrics = "^1.1.2"
transformers = "^4.33.3"
wandb = "^0.15.10"
pysbd = "^0.3.4"
deepspeed = "^0.12.4"
trl = "^0.7.4"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing:skip-covered"
markers = [
  "serial",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
