[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "pass",
  "pragma: no cover",
  "raise NotImplementedError",
  "raise TypeError",
  "raise ValueError"
]

[tool.isort]
known_local_folder = [
  'style-transfer',
  'tests'
]
line_length = 100
profile = 'black'

[tool.poetry]
authors = ["Arkhn's AI Team <ai@arkhn.com>"]
description = "a package to experiement style transfer using RLF, LLM, ReST ?"
license = "Apache-2.0"
name = "style-transfer"
readme = "README.md"
repository = "https://github.com/arkhn/open-nlp"
version = "0.1.0"

[tool.poetry.dependencies]
bitsandbytes = "^0.43.1"
datasets = "^2.16.1"
hydra-colorlog = "^1.2.0"
hydra-core = "^1.3.2"
hydra-joblib-launcher = "^1.2.0"
pandas = "^2.2.0"
peft = "^0.11.1"
python = "~3.11"
quickumls = "^1.4.1"
rich = "^13.5.2"
sentence-transformers = "^2.3.1"
torch = "^2.3.0"
tqdm = "^4.66.1"
transformers = "4.42.3"
trl = "^0.9.6"
vllm = "^0.5.0.post1"
wandb = "^0.16.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing:skip-covered"
markers = [
  "serial",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
